Bug #10940, when converting from unicode skip unencodable char instead of abort conversion.